tests/parsing/smtlib/v2.7/errors/082_define-sort_unclosed_1.smt2
(set-logic ALL)
(define-sort foo () bool _)
